examples/invalid/ns/memory/hello_task_glm_nested_window_struct_payload_invalid.ns
mod cpu Main {
  struct WindowPacket {
    window: Window<i64>
  }

  async fn consume(packet: WindowPacket) -> i64 {
    return 7;
  }

  fn main() -> i64 {
    return 1;
  }
}
